# TAILORAI

./: Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  test.text
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  start.py  test_merge.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: generate.py  health.py
backend/app/config/: model_provider.yaml
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
backend/app/schemas/: generate.py
backend/app/services/chains/: __init__.py  section_chains.py
backend/app/services/latex/: __init__.py  merge.py  validator.py
backend/app/services/llm/: prompts.py  providers.py
backend/app/services/parser/: __init__.py  latex_parser.py
backend/app/services/workflow/: graph.py  state.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/generate/: page.tsx
frontend/src/app/result/: page.tsx
frontend/src/components/: OutputViewer.tsx  ResumeForm.tsx
frontend/src/hooks/: useGenerateResume.ts
frontend/src/services/: apiClient.ts
frontend/src/store/: generationStore.ts
frontend/src/types/: api.ts
frontend/src/utils/: parseOutput.ts
