[project]
name = "tailorai"
version = "0.1.0"
description = "ResumeForge backend service for agentic LaTeX resume customization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"anthropic>=0.51.0",
	"fastapi>=0.115.12",
	"google-generativeai>=0.8.5",
	"groq>=0.24.0",
	"langchain>=0.3.25",
	"langchain-anthropic>=0.3.13",
	"langchain-google-genai>=2.1.4",
	"langchain-groq>=0.3.2",
	"langchain-openai>=0.3.16",
	"langgraph>=0.4.3",
	"pydantic-settings>=2.9.1",
	"python-dotenv>=1.1.0",
	"pyyaml>=6.0.2",
	"uvicorn[standard]>=0.34.2",
]

[project.optional-dependencies]
dev = [
	"httpx>=0.28.1",
	"pytest>=8.3.5",
	"ruff>=0.11.8",
]
